--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         </p>
     </header>
     <nav>
-        <a href="#">Home</a>
-        <a href="#">Contato</a>
+        <a href="index.html" rel="internal">Home</a>
+        <a href="contato.html">Contato</a>
     </nav>
     <main>
         <article>
